поправил конфиги чтобы миграции правильно накатывались в контейнер

--- a/PasswordSystem.API/appsettings.json
+++ b/PasswordSystem.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=192.168.1.13;Port=5432;Database=PasswordSystem;Username=postgres;Password=s8AGFyXchI5AaF"
+    "DefaultConnectionString": "Host=db;Port=5432;Database=passwordsystem_postgres;Username=postgres;Password=123654789"
   },
   "JwtSettings": {
     "SecretKey": "G9kcV2FgYXle0lJfD3Z+KP/Vl3T/y7ZnKY+2k4PwZvg=",
